python/tests/gold/tracingexternalauthtest/snapshots/econf.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "re2.max_program_size.error_level": 200,
          "envoy.reloadable_features.no_extension_lookup_by_name": false
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "alt_stat_name": "127_0_0_1_8877",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tracingexternalauthtest_ahttp_auth",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_extauth_tracingexternalauthtest_ahttp_auth_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tracingexternalauthtest-ahttp-auth",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_extauth_tracingexternalauthtest_ahttp_auth_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "zipkin_auth_9411",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_tracing_zipkin_auth_9411_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "zipkin-auth",
                        "port_value": 9411,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_tracing_zipkin_auth_9411_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tracingexternalauthtest_http",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_tracingexternalauthtest_http_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tracingexternalauthtest-http",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_tracingexternalauthtest_http_default",
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "generate_request_id": true,
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.ext_authz",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                        "clear_route_cache": true,
                        "http_service": {
                          "authorization_request": {
                            "allowed_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "from",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-header",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-status",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "user-agent",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-for",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-host",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-proto",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "headers_to_add": []
                          },
                          "authorization_response": {
                            "allowed_client_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "allowed_upstream_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            }
                          },
                          "path_prefix": "/extauth",
                          "server_uri": {
                            "cluster": "cluster_extauth_tracingexternalauthtest_ahttp_auth_default",
                            "timeout": "5.000s",
                            "uri": "http://extauth"
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "start_child_span": true
                      }
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8080-tracingexternalauthtest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "tracing": {},
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "generate_request_id": true,
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.ext_authz",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                        "clear_route_cache": true,
                        "http_service": {
                          "authorization_request": {
                            "allowed_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "from",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-header",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-status",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "user-agent",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-for",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-host",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-proto",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "headers_to_add": []
                          },
                          "authorization_response": {
                            "allowed_client_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "allowed_upstream_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            }
                          },
                          "path_prefix": "/extauth",
                          "server_uri": {
                            "cluster": "cluster_extauth_tracingexternalauthtest_ahttp_auth_default",
                            "timeout": "5.000s",
                            "uri": "http://extauth"
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "start_child_span": true
                      }
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8080-tracingexternalauthtest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "tracing": {},
                  "use_remote_address": true
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-8080-tracingexternalauthtest",
        "traffic_direction": "OUTBOUND"
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8443,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "generate_request_id": true,
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.ext_authz",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                        "clear_route_cache": true,
                        "http_service": {
                          "authorization_request": {
                            "allowed_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "from",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-header",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-status",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "user-agent",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-for",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-host",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-proto",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "headers_to_add": []
                          },
                          "authorization_response": {
                            "allowed_client_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "allowed_upstream_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            }
                          },
                          "path_prefix": "/extauth",
                          "server_uri": {
                            "cluster": "cluster_extauth_tracingexternalauthtest_ahttp_auth_default",
                            "timeout": "5.000s",
                            "uri": "http://extauth"
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "start_child_span": true
                      }
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8443-tracingexternalauthtest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "tracing": {},
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "generate_request_id": true,
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.ext_authz",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                        "clear_route_cache": true,
                        "http_service": {
                          "authorization_request": {
                            "allowed_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "from",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-header",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "requested-status",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "user-agent",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-for",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-host",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "x-forwarded-proto",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "headers_to_add": []
                          },
                          "authorization_response": {
                            "allowed_client_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            },
                            "allowed_upstream_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "location",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "proxy-authenticate",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "set-cookie",
                                  "ignore_case": true
                                },
                                {
                                  "exact": "www-authenticate",
                                  "ignore_case": true
                                }
                              ]
                            }
                          },
                          "path_prefix": "/extauth",
                          "server_uri": {
                            "cluster": "cluster_extauth_tracingexternalauthtest_ahttp_auth_default",
                            "timeout": "5.000s",
                            "uri": "http://extauth"
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "start_child_span": true
                      }
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8443-tracingexternalauthtest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_tracingexternalauthtest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_tracingexternalauthtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "tracing": {},
                  "use_remote_address": true
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-8443-tracingexternalauthtest",
        "traffic_direction": "OUTBOUND"
      }
    ]
  }
}
